--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background:#fff url(../images/background.gif) repeat-x center 187px;
+	background:#fff url(../background.gif) repeat-x center 187px;
 	color:#585858;
 	font-family:Arial;
 	font-size:14px;
@@ -21,11 +21,11 @@ img{
 	visibility:hidden;
 }
 #page{
-	background:url(../images/background.jpg) no-repeat center 180px;
+	background:url(../background.jpg) no-repeat center 180px;
 	width:100%;
 }
 #header{
-	background:url(../images/bg-header.gif) repeat-x;
+	background:url(../bg-header.gif) repeat-x;
 	height:auto;
 	overflow:hidden;
 	position:relative;
@@ -77,16 +77,16 @@ img{
 	height:43px;
 }
 #header ul li.current a{
-	background:url(../images/bg-menu.gif) repeat-x;
+	background:url(../bg-menu.gif) repeat-x;
 	color:#2a495e;
 	font-weight:bold;
 	text-shadow:1px 1px 0 #a8d32c;
 }
 #header ul li a:hover{
-	background:url(../images/bg-menu.gif) repeat-x;
+	background:url(../bg-menu.gif) repeat-x;
 }
 #header div#tagline{
-	background:url(../images/bg-header2.jpg) no-repeat center -20px;
+	background:url(../bg-header2.jpg) no-repeat center -20px;
 	margin-top:10px;
 }
 #header div#tagline div{
@@ -115,7 +115,7 @@ img{
 	width:340px;
 }
 #content{
-	background:url(../images/bg-content.gif) no-repeat top center;
+	background:url(../bg-content.gif) no-repeat top center;
 	margin:0 auto;
 	min-height:174px;
 	overflow:hidden;
@@ -124,7 +124,7 @@ img{
 	;
 }
 #content div#home{
-	background:url(../images/bg-home.gif) no-repeat top center;
+	background:url(../bg-home.gif) no-repeat top center;
 	margin:-0 auto 0;
 	min-height:174px;
 	overflow:hidden;
@@ -513,7 +513,7 @@ h4 a, div#aside p span a{
 	float:left;
 }
 #footer{
-	background:#274F75 url(../images/bg-footer.gif) repeat-x;
+	background:#274F75 url(../bg-footer.gif) repeat-x;
 	min-height:113px;
 	width:100%;
 }
